# veeam-syncfolder

./: .pylintrc  Makefile  README.md  pyproject.toml
src/syncronize/: __init__.py  __main__.py  cli.py  config.py  synchronize.py
tests/: conftest.py  test_config.py  test_synchronize.py
